add more commands to RDD

--- a/spark-docker/apps/Exemplo RDD.ipynb
+++ b/spark-docker/apps/Exemplo RDD.ipynb
@@ -2,20 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0c6b0237-0197-438d-aea5-056b0551d6f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/10/15 22:15:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "\n",
@@ -28,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "cc37ea4c-c7a2-4f28-9b30-1f42768af13f",
    "metadata": {},
    "outputs": [
@@ -45,7 +35,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,6 +43,31 @@
    "source": [
     "numeros = sc.parallelize([1,2,3,4,5,6,7,8,9,10])\n",
     "numeros.take(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6dcb7ee5-0055-450e-9462-0fbcae840555",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numeros.sum()\n",
+    "numeros.min()\n",
+    "#numeros.count()\n",
+    "#numeros.mean()\n",
+    "#numeros.max()"
    ]
   }
  ],
