add more exemplo with RDD

--- a/spark-docker/apps/Exemplo RDD.ipynb
+++ b/spark-docker/apps/Exemplo RDD.ipynb
@@ -69,6 +69,30 @@
     "#numeros.mean()\n",
     "#numeros.max()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1c619bdc-a87e-40cf-90f3-b38d70cbd227",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Executando funções com o lambda. No exemlo multiplica todos os números por 2\n",
+    "\n",
+    "mapa = numeros.map(lambda mapa: mapa * 2)\n",
+    "mapa.collect() #collecta é semprenecessário no RDD para executar a função"
+   ]
   }
  ],
  "metadata": {
