more examples in RDD

--- a/spark-docker/apps/Exemplo RDD.ipynb
+++ b/spark-docker/apps/Exemplo RDD.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "1c619bdc-a87e-40cf-90f3-b38d70cbd227",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +92,33 @@
     "\n",
     "mapa = numeros.map(lambda mapa: mapa * 2)\n",
     "mapa.collect() #collecta é semprenecessário no RDD para executar a função"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "50ec6391-63d1-4eda-bdd5-0f7337f7905b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'compravalores' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Exemplo de tuplas em RDD\u001b[39;00m\n\u001b[1;32m      3\u001b[0m compras \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mparallelize([(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m100\u001b[39m), (\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m200\u001b[39m), (\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m300\u001b[39m)])\n\u001b[0;32m----> 4\u001b[0m chaves \u001b[38;5;241m=\u001b[39m \u001b[43mcompravalores\u001b[49m()\n\u001b[1;32m      5\u001b[0m valores \u001b[38;5;241m=\u001b[39m compras\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[1;32m      6\u001b[0m valores\u001b[38;5;241m.\u001b[39mcollect()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'compravalores' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de tuplas em RDD\n",
+    "\n",
+    "compras = sc.parallelize([(1,100), (2,200), (3,300)])\n",
+    "chaves = compravalores()\n",
+    "valores = compras.values()\n",
+    "valores.collect()\n"
    ]
   }
  ],
