--- a/spark-docker/apps/01 - Exemplos RDD.ipynb
+++ b/spark-docker/apps/01 - Exemplos RDD.ipynb
@@ -96,27 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "50ec6391-63d1-4eda-bdd5-0f7337f7905b",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'compravalores' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Exemplo de tuplas em RDD\u001b[39;00m\n\u001b[1;32m      3\u001b[0m compras \u001b[38;5;241m=\u001b[39m sc\u001b[38;5;241m.\u001b[39mparallelize([(\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m100\u001b[39m), (\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m200\u001b[39m), (\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m300\u001b[39m)])\n\u001b[0;32m----> 4\u001b[0m chaves \u001b[38;5;241m=\u001b[39m \u001b[43mcompravalores\u001b[49m()\n\u001b[1;32m      5\u001b[0m valores \u001b[38;5;241m=\u001b[39m compras\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[1;32m      6\u001b[0m valores\u001b[38;5;241m.\u001b[39mcollect()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'compravalores' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[100, 200, 300]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Exemplo de tuplas em RDD\n",
     "\n",
     "compras = sc.parallelize([(1,100), (2,200), (3,300)])\n",
-    "chaves = compravalores()\n",
+    "chaves = compras.keys()\n",
     "valores = compras.values()\n",
     "valores.collect()\n"
    ]
