--- a/spark-docker/apps/02 - DataFrame.ipynb
+++ b/spark-docker/apps/02 - DataFrame.ipynb
@@ -42,6 +42,141 @@
     "df = spark.createDataFrame([(\"João\", 10),(\"Maria\", 20),(\"Pedro\", 30)])\n",
     "df.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dc43cc9a-2842-497f-a470-d122b4e3b80f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "| ID| Nome|\n",
+      "+---+-----+\n",
+      "|  1| João|\n",
+      "|  2|Maria|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo DF com schema \n",
+    "\n",
+    "schema = \"ID int, Nome string\"\n",
+    "dados = [[1, \"João\"], [2, \"Maria\"]]\n",
+    "\n",
+    "df2 = spark.createDataFrame(dados, schema)\n",
+    "df2.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6191dd20-0641-4c8c-b357-1e3493650a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----+\n",
+      "|produto|venda|\n",
+      "+-------+-----+\n",
+      "| caneta|   10|\n",
+      "|  lapis|   10|\n",
+      "| caneta|   40|\n",
+      "+-------+-----+\n",
+      "\n",
+      "+-------+----------+\n",
+      "|produto|sum(venda)|\n",
+      "+-------+----------+\n",
+      "| caneta|        50|\n",
+      "|  lapis|        10|\n",
+      "+-------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de operação sum no data frame\n",
+    "from pyspark.sql.functions import sum\n",
+    "\n",
+    "schema2 = \"produto string, venda int\"\n",
+    "dados = [[\"caneta\", 10],[\"lapis\", 10],[\"caneta\", 40]]\n",
+    "\n",
+    "df3 = spark.createDataFrame(dados, schema2)\n",
+    "df3.show()\n",
+    "\n",
+    "agrupado = df3.groupBy(\"produto\").agg(sum(\"venda\"))\n",
+    "agrupado.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b0626f80-2e48-4dcc-a3d4-9fb65b9c86bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------+\n",
+      "|venda|produto|\n",
+      "+-----+-------+\n",
+      "|   10| caneta|\n",
+      "|   10|  lapis|\n",
+      "|   40| caneta|\n",
+      "+-----+-------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo select para seleção de colunas quando necessário\n",
+    "\n",
+    "df3.select(\"venda\", \"produto\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "355207b6-6c0e-452f-b62e-3417fe5ef442",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+-------+-----------+\n",
+      "|venda|produto|(venda * 2)|\n",
+      "+-----+-------+-----------+\n",
+      "|   10| caneta|         20|\n",
+      "|   10|  lapis|         20|\n",
+      "|   40| caneta|         80|\n",
+      "+-----+-------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemplo de expressões \n",
+    "from pyspark.sql.functions import expr\n",
+    "\n",
+    "df3.select(\"venda\", \"produto\", expr(\"venda * 2\")).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5406318d-a978-4630-9734-cd13102d3c88",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
