--- a/spark-docker/apps/02 - DataFrame.ipynb
+++ b/spark-docker/apps/02 - DataFrame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "908224ad-0f05-457e-bbbe-976cc3a904df",
    "metadata": {},
    "outputs": [
@@ -12,23 +12,8 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "26/02/07 21:11:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "26/02/07 21:11:24 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
+      "26/02/14 21:46:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+---+\n",
-      "|   _1| _2|\n",
-      "+-----+---+\n",
-      "| João| 10|\n",
-      "|Maria| 20|\n",
-      "|Pedro| 30|\n",
-      "+-----+---+\n",
-      "\n"
      ]
     }
    ],
@@ -172,11 +157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5406318d-a978-4630-9734-cd13102d3c88",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      4\u001b[0m arqschema \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m id INT, nome STRING, status STRING, cidade STRING, vendas INT, data STRING\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m despachantes \u001b[38;5;241m=\u001b[39m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mread\u001b[38;5;241m.\u001b[39mcsv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdespachantes.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, schema \u001b[38;5;241m=\u001b[39m arqschema)\n\u001b[1;32m      7\u001b[0m desáchantes\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Carregando dados para um DataFrame\n",
+    "from pyspark.sql.types import *\n",
+    "\n",
+    "arqschema = \" id INT, nome STRING, status STRING, cidade STRING, vendas INT, data STRING\"\n",
+    "\n",
+    "despachantes = spark.read.csv(\"despachantes.csv\", header = False, schema = arqschema)\n",
+    "desáchantes.show()"
+   ]
   }
  ],
  "metadata": {
