add load data in DataFrames

--- a/spark-docker/apps/02 - DataFrame.ipynb
+++ b/spark-docker/apps/02 - DataFrame.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "908224ad-0f05-457e-bbbe-976cc3a904df",
    "metadata": {},
    "outputs": [
@@ -14,6 +14,20 @@
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
       "26/02/14 21:46:32 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "                                                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+\n",
+      "|   _1| _2|\n",
+      "+-----+---+\n",
+      "| João| 10|\n",
+      "|Maria| 20|\n",
+      "|Pedro| 30|\n",
+      "+-----+---+\n",
+      "\n"
      ]
     }
    ],
@@ -157,30 +171,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5406318d-a978-4630-9734-cd13102d3c88",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'spark' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpyspark\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msql\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtypes\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      4\u001b[0m arqschema \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m id INT, nome STRING, status STRING, cidade STRING, vendas INT, data STRING\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 6\u001b[0m despachantes \u001b[38;5;241m=\u001b[39m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mread\u001b[38;5;241m.\u001b[39mcsv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdespachantes.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, header \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, schema \u001b[38;5;241m=\u001b[39m arqschema)\n\u001b[1;32m      7\u001b[0m desáchantes\u001b[38;5;241m.\u001b[39mshow()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "| id|               nome|status|       cidade|vendas|      data|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "|  1|   Carminda Pestana| Ativo|  Santa Maria|    23|2020-08-11|\n",
+      "|  2|    Deolinda Vilela| Ativo|Novo Hamburgo|    34|2020-03-05|\n",
+      "|  3|   Emídio Dornelles| Ativo| Porto Alegre|    34|2020-02-05|\n",
+      "|  4|Felisbela Dornelles| Ativo| Porto Alegre|    36|2020-02-05|\n",
+      "|  5|     Graça Ornellas| Ativo| Porto Alegre|    12|2020-02-05|\n",
+      "|  6|   Matilde Rebouças| Ativo| Porto Alegre|    22|2019-01-05|\n",
+      "|  7|    Noêmia   Orriça| Ativo|  Santa Maria|    45|2019-10-05|\n",
+      "|  8|      Roque Vásquez| Ativo| Porto Alegre|    65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz| Ativo| Porto Alegre|    54|2018-05-05|\n",
+      "| 10|   Viviana Sequeira| Ativo| Porto Alegre|     0|2020-09-05|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Carregando dados para um DataFrame\n",
+    "# Carregando dados para um DataFrame utilizando read.csv\n",
     "from pyspark.sql.types import *\n",
     "\n",
     "arqschema = \" id INT, nome STRING, status STRING, cidade STRING, vendas INT, data STRING\"\n",
     "\n",
     "despachantes = spark.read.csv(\"despachantes.csv\", header = False, schema = arqschema)\n",
-    "desáchantes.show()"
+    "despachantes.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "dc116241-83f0-46b4-b492-e1e8954ff805",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|_c0|                _c1|  _c2|          _c3|_c4|       _c5|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|  1|   Carminda Pestana|Ativo|  Santa Maria| 23|2020-08-11|\n",
+      "|  2|    Deolinda Vilela|Ativo|Novo Hamburgo| 34|2020-03-05|\n",
+      "|  3|   Emídio Dornelles|Ativo| Porto Alegre| 34|2020-02-05|\n",
+      "|  4|Felisbela Dornelles|Ativo| Porto Alegre| 36|2020-02-05|\n",
+      "|  5|     Graça Ornellas|Ativo| Porto Alegre| 12|2020-02-05|\n",
+      "|  6|   Matilde Rebouças|Ativo| Porto Alegre| 22|2019-01-05|\n",
+      "|  7|    Noêmia   Orriça|Ativo|  Santa Maria| 45|2019-10-05|\n",
+      "|  8|      Roque Vásquez|Ativo| Porto Alegre| 65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz|Ativo| Porto Alegre| 54|2018-05-05|\n",
+      "| 10|   Viviana Sequeira|Ativo| Porto Alegre|  0|2020-09-05|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Carregando os mesmos dados utilizando read.load\n",
+    "\n",
+    "desp_autoschema = spark.read.load(\"despachantes.csv\", header = False, format=\"csv\", sep= \",\", inferSchema = True)\n",
+    "desp_autoschema.show()"
    ]
   }
  ],
