add comment in notebooks

--- a/spark-docker/apps/01 - Exemplos RDD.ipynb
+++ b/spark-docker/apps/01 - Exemplos RDD.ipynb
@@ -7,6 +7,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "    NOTEBOOK FOCADO EM MOSTRAR EXEMPLOS DO RDD, CAMADA MAIS FUNDAMENTAL DO SPARK.\n",
+    "'''\n",
+    "\n",
     "from pyspark.sql import SparkSession\n",
     "\n",
     "# Cria ou recupera uma sessão Spark\n",
