--- a/spark-docker/apps/03 - Ações e transformações.ipynb
+++ b/spark-docker/apps/03 - Ações e transformações.ipynb
@@ -2,11 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be9b5b6e-ad14-4281-834e-918d194c21e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "26/02/16 19:55:06 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from pyspark.sql import SparkSession\n",
+    "spark = SparkSession.builder.appName(\"Ações e transformações\").getOrCreate() # inicializa o spark\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "365f82c5-37ed-4426-8f44-ad38589f15b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "| id|               nome|status|       cidade|vendas|      data|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "|  1|   Carminda Pestana| Ativo|  Santa Maria|    23|2020-08-11|\n",
+      "|  2|    Deolinda Vilela| Ativo|Novo Hamburgo|    34|2020-03-05|\n",
+      "|  3|   Emídio Dornelles| Ativo| Porto Alegre|    34|2020-02-05|\n",
+      "|  4|Felisbela Dornelles| Ativo| Porto Alegre|    36|2020-02-05|\n",
+      "|  5|     Graça Ornellas| Ativo| Porto Alegre|    12|2020-02-05|\n",
+      "|  6|   Matilde Rebouças| Ativo| Porto Alegre|    22|2019-01-05|\n",
+      "|  7|    Noêmia   Orriça| Ativo|  Santa Maria|    45|2019-10-05|\n",
+      "|  8|      Roque Vásquez| Ativo| Porto Alegre|    65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz| Ativo| Porto Alegre|    54|2018-05-05|\n",
+      "| 10|   Viviana Sequeira| Ativo| Porto Alegre|     0|2020-09-05|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql.types import *\n",
+    "\n",
+    "arqschema = \" id INT, nome STRING, status STRING, cidade STRING, vendas INT, data STRING\"\n",
+    "\n",
+    "despachantes = spark.read.csv(\"despachantes.csv\", header = False, schema = arqschema)\n",
+    "despachantes.show()"
+   ]
   }
  ],
  "metadata": {
