--- a/spark-docker/apps/03 - Ações e transformações.ipynb
+++ b/spark-docker/apps/03 - Ações e transformações.ipynb
@@ -24,17 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "365f82c5-37ed-4426-8f44-ad38589f15b3",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -64,6 +57,104 @@
     "\n",
     "despachantes = spark.read.csv(\"despachantes.csv\", header = False, schema = arqschema)\n",
     "despachantes.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "861f59b0-6c32-4672-9102-d242916a2dfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "| id|               nome|status|       cidade|vendas|      data|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "|  7|    Noêmia   Orriça| Ativo|  Santa Maria|    45|2019-10-05|\n",
+      "|  1|   Carminda Pestana| Ativo|  Santa Maria|    23|2020-08-11|\n",
+      "|  8|      Roque Vásquez| Ativo| Porto Alegre|    65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz| Ativo| Porto Alegre|    54|2018-05-05|\n",
+      "|  4|Felisbela Dornelles| Ativo| Porto Alegre|    36|2020-02-05|\n",
+      "|  3|   Emídio Dornelles| Ativo| Porto Alegre|    34|2020-02-05|\n",
+      "|  6|   Matilde Rebouças| Ativo| Porto Alegre|    22|2019-01-05|\n",
+      "|  5|     Graça Ornellas| Ativo| Porto Alegre|    12|2020-02-05|\n",
+      "| 10|   Viviana Sequeira| Ativo| Porto Alegre|     0|2020-09-05|\n",
+      "|  2|    Deolinda Vilela| Ativo|Novo Hamburgo|    34|2020-03-05|\n",
+      "+---+-------------------+------+-------------+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exemplo orderBy\n",
+    "\n",
+    "from pyspark.sql import functions as Func\n",
+    "\n",
+    "despachantes.orderBy(Func.col(\"cidade\").desc(), Func.col(\"vendas\").desc()).show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e1442c37-076b-4147-85b4-fcfaa0a19aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+-----------+\n",
+      "|       cidade|sum(vendas)|\n",
+      "+-------------+-----------+\n",
+      "|  Santa Maria|         68|\n",
+      "|Novo Hamburgo|         34|\n",
+      "| Porto Alegre|        223|\n",
+      "+-------------+-----------+\n",
+      "\n",
+      "+-------------+-----------+\n",
+      "|       cidade|sum(vendas)|\n",
+      "+-------------+-----------+\n",
+      "|Novo Hamburgo|         34|\n",
+      "|  Santa Maria|         68|\n",
+      "| Porto Alegre|        223|\n",
+      "+-------------+-----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exemplo de agregação com soma de vendas e group By\n",
+    "\n",
+    "despachantes.groupBy(\"cidade\").agg(sum(\"vendas\")).show() # forma simples\n",
+    "\n",
+    "despachantes.groupBy(\"cidade\").agg(sum(\"vendas\")).orderBy(Func.col(\"sum(vendas)\")).show() # adicionando ordenação"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "615bf7e6-14a4-4db1-9822-7234ffa372dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---------------+------+-------------+------+----------+\n",
+      "| id|           nome|status|       cidade|vendas|      data|\n",
+      "+---+---------------+------+-------------+------+----------+\n",
+      "|  2|Deolinda Vilela| Ativo|Novo Hamburgo|    34|2020-03-05|\n",
+      "+---+---------------+------+-------------+------+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizando Filter para filtrar dados\n",
+    "\n",
+    "despachantes.filter(Func.col(\"id\") == 2).show()"
    ]
   }
  ],
