add initiate code

--- a/spark-docker/apps/04 - Exportando dados.ipynb
+++ b/spark-docker/apps/04 - Exportando dados.ipynb
@@ -2,8 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "36afe454-73fc-48f5-a3fd-5e12d174dd55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "26/02/19 20:49:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "spark  = SparkSession.builder.appName(\"Exportando dados\").getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0c496abf-fa22-4d38-bfd3-e304874aa048",
+   "id": "f50d5943-cdab-4de5-a210-622a88a8e462",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +33,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
