add file in path

--- a/spark-docker/apps/04 - Exportando dados.ipynb
+++ b/spark-docker/apps/04 - Exportando dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "36afe454-73fc-48f5-a3fd-5e12d174dd55",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "26/02/19 20:49:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "26/02/22 19:09:33 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -24,8 +24,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f50d5943-cdab-4de5-a210-622a88a8e462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|_c0|                _c1|  _c2|          _c3|_c4|       _c5|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|  1|   Carminda Pestana|Ativo|  Santa Maria| 23|2020-08-11|\n",
+      "|  2|    Deolinda Vilela|Ativo|Novo Hamburgo| 34|2020-03-05|\n",
+      "|  3|   Emídio Dornelles|Ativo| Porto Alegre| 34|2020-02-05|\n",
+      "|  4|Felisbela Dornelles|Ativo| Porto Alegre| 36|2020-02-05|\n",
+      "|  5|     Graça Ornellas|Ativo| Porto Alegre| 12|2020-02-05|\n",
+      "|  6|   Matilde Rebouças|Ativo| Porto Alegre| 22|2019-01-05|\n",
+      "|  7|    Noêmia   Orriça|Ativo|  Santa Maria| 45|2019-10-05|\n",
+      "|  8|      Roque Vásquez|Ativo| Porto Alegre| 65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz|Ativo| Porto Alegre| 54|2018-05-05|\n",
+      "| 10|   Viviana Sequeira|Ativo| Porto Alegre|  0|2020-09-05|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "despachantes = spark.read.csv(\"despachantes.csv\")\n",
+    "despachantes.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dd6e8b23-cb90-4369-b20b-ec4835e49ed1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                "
+     ]
+    }
+   ],
+   "source": [
+    "# persistindo dados do DF no diretório intalke \n",
+    "\n",
+    "despachantes.write.format(\"parquet\").save(\"intake/despachantes\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8131d295-6252-4590-9e7a-3bc208288f6b",
    "metadata": {},
    "outputs": [],
    "source": []
