--- a/spark-docker/apps/04 - Exportando dados.ipynb
+++ b/spark-docker/apps/04 - Exportando dados.ipynb
@@ -92,6 +92,38 @@
     "despachantes.write.format(\"json\").save(\"intake/despachantesJson\")\n",
     "despachantes.write.format(\"csv\").save(\"intake/despachantesCsv\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9fce9c0a-3b48-4988-903c-2d7999ce8c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|_c0|                _c1|  _c2|          _c3|_c4|       _c5|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "|  1|   Carminda Pestana|Ativo|  Santa Maria| 23|2020-08-11|\n",
+      "|  2|    Deolinda Vilela|Ativo|Novo Hamburgo| 34|2020-03-05|\n",
+      "|  3|   Emídio Dornelles|Ativo| Porto Alegre| 34|2020-02-05|\n",
+      "|  4|Felisbela Dornelles|Ativo| Porto Alegre| 36|2020-02-05|\n",
+      "|  5|     Graça Ornellas|Ativo| Porto Alegre| 12|2020-02-05|\n",
+      "|  6|   Matilde Rebouças|Ativo| Porto Alegre| 22|2019-01-05|\n",
+      "|  7|    Noêmia   Orriça|Ativo|  Santa Maria| 45|2019-10-05|\n",
+      "|  8|      Roque Vásquez|Ativo| Porto Alegre| 65|2020-03-05|\n",
+      "|  9|      Uriel Queiroz|Ativo| Porto Alegre| 54|2018-05-05|\n",
+      "| 10|   Viviana Sequeira|Ativo| Porto Alegre|  0|2020-09-05|\n",
+      "+---+-------------------+-----+-------------+---+----------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "despachantes.show()"
+   ]
   }
  ],
  "metadata": {
