add sum command

--- a/spark-docker/apps/ex - 01.ipynb
+++ b/spark-docker/apps/ex - 01.ipynb
@@ -194,7 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "3fdd4e65-0eb8-4066-bff1-9a11b8407588",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "47700a41-c7a3-4f10-95bc-ff468aec7f30",
    "metadata": {},
    "outputs": [
@@ -202,31 +210,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+--------+----------+---------+---------+--------+---------+-------------------+------+------+------+\n",
-      "|VendasID|VendedorID|ClienteID|     Data|   Total|ClienteID|            Cliente|Estado|Genero|Status|\n",
-      "+--------+----------+---------+---------+--------+---------+-------------------+------+------+------+\n",
-      "|       1|         1|       91| 1/1/2019|  8053.6|       91|     Cosme Zambujal|    BA|     M|Silver|\n",
-      "|       2|         6|      185| 1/1/2020|   150.4|      185|  Gertrudes Hidalgo|    PA|     F|Silver|\n",
-      "|       3|         7|       31| 2/1/2020|  6087.0|       31|   Antão Corte-Real|    ES|     M|Silver|\n",
-      "|       4|         5|       31| 2/1/2019| 13828.6|       31|   Antão Corte-Real|    ES|     M|Silver|\n",
-      "|       5|         5|       31| 3/1/2018|26096.66|       31|   Antão Corte-Real|    ES|     M|Silver|\n",
-      "|       6|         5|       31| 4/1/2020| 18402.0|       31|   Antão Corte-Real|    ES|     M|Silver|\n",
-      "|       7|         5|       31| 6/1/2019|  7524.2|       31|   Antão Corte-Real|    ES|     M|Silver|\n",
-      "|       8|         5|      186| 6/1/2019| 12036.6|      186|  Gertrudes Infante|    RS|     F|Silver|\n",
-      "|       9|         7|       91| 6/1/2020| 2804.75|       91|     Cosme Zambujal|    BA|     M|Silver|\n",
-      "|      10|         2|      202| 6/1/2020|  8852.0|      202| Greice Lameirinhas|    PI|     F|Silver|\n",
-      "|      11|         7|       58| 8/1/2019|16545.25|       58|     Brígida Gusmão|    DF|     F|Silver|\n",
-      "|      12|         7|       58| 9/1/2018|11411.88|       58|     Brígida Gusmão|    DF|     F|Silver|\n",
-      "|      13|         7|       58|10/1/2019| 15829.7|       58|     Brígida Gusmão|    DF|     F|Silver|\n",
-      "|      14|         3|      249|12/1/2020| 6154.36|      249|     Joaquim Mieiro|    TO|     M|Silver|\n",
-      "|      15|         4|      249|12/1/2018| 3255.08|      249|     Joaquim Mieiro|    TO|     M|Silver|\n",
-      "|      16|         7|      192|13/1/2020| 2901.25|      192|    Gisela Candeias|    SC|     F|Silver|\n",
-      "|      17|         2|       79|13/1/2019| 15829.7|       79|      Cidália Miera|    SE|     F|Silver|\n",
-      "|      18|        10|       79|14/1/2019|16996.36|       79|      Cidália Miera|    SE|     F|Silver|\n",
-      "|      19|        10|      191|14/1/2019|   155.0|      191|       Gisela Bahia|    SP|     F|Silver|\n",
-      "|      20|         9|      218|15/1/2018|  131.75|      218|Hermígio Villaverde|    MA|     M|Silver|\n",
-      "+--------+----------+---------+---------+--------+---------+-------------------+------+------+------+\n",
-      "only showing top 20 rows\n",
+      "+--------+-----+\n",
+      "|  Status|count|\n",
+      "+--------+-----+\n",
+      "|  Silver|  395|\n",
+      "|    Gold|    3|\n",
+      "|Platinum|    2|\n",
+      "+--------+-----+\n",
+      "\n",
+      "+--------+------------------+\n",
+      "|  Status|        sum(Total)|\n",
+      "+--------+------------------+\n",
+      "|  Silver|        3014291.36|\n",
+      "|    Gold|27286.690000000002|\n",
+      "|Platinum|          12584.68|\n",
+      "+--------+------------------+\n",
       "\n"
      ]
     }
@@ -234,11 +232,18 @@
    "source": [
     "# -> Demonstre quanto cada status de cliente representa em vendas\n",
     "\n",
-    "#relacionamento das tabelas vendas e clientes\n",
+    "from pyspark.sql import functions as Func\n",
+    "from pyspark.sql.types import *\n",
     "\n",
+    "#relacionamento das tabelas vendas e clientes\n",
     "vendas_clientes = vendas.join(clientes, vendas.ClienteID == clientes.ClienteID, \"inner\")\n",
     "\n",
-    "vendas_clientes.show()\n"
+    "# Mostra quantidade de vendas por status\n",
+    "vendas_clientes.groupBy(\"Status\").count().orderBy(\"count\", ascending = False).show()\n",
+    "\n",
+    "# Mostra soma de receita por status\n",
+    "\n",
+    "vendas_clientes.groupBy(\"Status\").sum(\"Total\").orderBy(\"sum(Total)\", ascending = False).show()\n"
    ]
   }
  ],
